--- a/ClipVault/Views/Video/Create.cshtml
+++ b/ClipVault/Views/Video/Create.cshtml
@@ -21,6 +21,10 @@
             <input asp-for="ThumbnailUrl" type="text" class="form-control" />
         </div>
         <div class="mb-3 row p-1">
+            <label asp-for="Tags"></label>
+            <input asp-for="Tags" class="form-control" placeholder="Comma-separated (e.g. 3D, 2D)" />
+        </div>
+        <div class="mb-3 row p-1">
             <label asp-for="Title" class="text-secondary p-0"></label>
             <input asp-for="Title" type="text" class="form-control" />
         </div>
