--- a/ClipVault/wwwroot/css/site.css
+++ b/ClipVault/wwwroot/css/site.css
@@ -35,3 +35,10 @@ body {
     margin: 0 auto;
     padding: 0 20px;
 }
+
+.card-text, .card-tags {
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+}
