--- a/ClipVault/Views/Video/Edit.cshtml
+++ b/ClipVault/Views/Video/Edit.cshtml
@@ -19,7 +19,7 @@
         </div>
         <div class="mb-3 row p-1">
             <label asp-for="Tags"></label>
-            <input asp-for="Tags" class="form-control" placeholder="Comma-separated (e.g. 3D, 2D)" />
+            <input asp-for="Tags" class="form-control" name="TagsString" value="@ViewBag.TagsString" placeholder="Comma-separated (e.g. 3D, 2D)" />
         </div>
         <div class="mb-3 row p-1">
             <label asp-for="Title" class="text-secondary p-0"></label>
