--- a/ClipVault/Views/Home/Index.cshtml
+++ b/ClipVault/Views/Home/Index.cshtml
@@ -3,6 +3,7 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <h2 class="display-4">Collection of your favorite videos</h2>
+    <a asp-action="Index" asp-controller="Video" class="btn">The collection</a>
+    <a asp-action="Create" asp-controller="Video" class="btn">Add a video</a>
 </div>
